--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -125,19 +125,19 @@
     "PAINT_GUIDE_CAMERA": "{N, number} | מצלמה",
     "PAINT_GUIDE_COLOR": "{N, number} | צבע",
     "PAINT_GUIDE_LINE_WIDTH": "{N, number} | רוחב הקו",
-    "PAINT_GUIDE_UNDO_DESCRIPTION": "Reverses the most recent change.",
-    "PAINT_GUIDE_REDO_DESCRIPTION": "Reverses the most recent Undo.",
-    "PAINT_GUIDE_SHAPE_DESCRIPTION": "Choose a shape to draw: line, circle/ellipse, rectangle, or triangle.",
+    "PAINT_GUIDE_UNDO_DESCRIPTION": ".בטל - מבטל את השינוי האחרון",
+    "PAINT_GUIDE_REDO_DESCRIPTION": ".הופך את הביטול האחרון",
+    "PAINT_GUIDE_SHAPE_DESCRIPTION": ".בחר צורה לציור: קו, עיגול/אליפסה, מלבן או משולש",
     "PAINT_GUIDE_CHARACTER_NAME_DESCRIPTION": " .ערוך את שם הדמות",
-    "PAINT_GUIDE_CUT_DESCRIPTION": "After selecting the Cut tool, you can tap a character or shape to remove it from the canvas.",
-    "PAINT_GUIDE_DUPLICATE_DESCRIPTION": "After selecting the Duplicate tool, you can tap a character or shape to create a copy of it.",
-    "PAINT_GUIDE_ROTATE_DESCRIPTION": "After selecting the Rotate tool, you can rotate a character or shape around its center.",
-    "PAINT_GUIDE_DRAG_DESCRIPTION": "After selecting the Drag tool, you can drag a character or shape on the canvas. If you tap on a shape, you can then edit the shape by dragging the dots that appear.",
-    "PAINT_GUIDE_SAVE_DESCRIPTION": "Save changes and leave the Paint Editor.",
-    "PAINT_GUIDE_FILL_DESCRIPTION": "After selecting the Fill tool, you can tap any section of a character or shape to fill it with the currently selected color.",
-    "PAINT_GUIDE_CAMERA_DESCRIPTION": "After selecting the Camera tool, you can tap any section of a character or shape, and then tap the camera button to fill the section with a new photo taken with the camera.",
-    "PAINT_GUIDE_COLOR_DESCRIPTION": "Select a new color to use for drawing and filling in shapes.",
-    "PAINT_GUIDE_LINE_WIDTH_DESCRIPTION": "Change the width of the lines in the shapes you are drawing.",
+    "PAINT_GUIDE_CUT_DESCRIPTION": "לאחר בחירת הכלי Cut, תוכל להקיש על תו או צורה כדי להסיר אותם מהבד.",
+    "PAINT_GUIDE_DUPLICATE_DESCRIPTION": ".לאחר בחירת  כלי שכפול, תוכלו להקיש על תו או צורה כדי ליצור עותק שלהם",
+    "PAINT_GUIDE_ROTATE_DESCRIPTION": ".לאחר בחירת הכלי סיבוב, תוכלו לסובב תו או צורה סביב המרכז שלה",
+    "PAINT_GUIDE_DRAG_DESCRIPTION": ".אחר בחירת כלי הגרירה, תוכלו לגרור דמות או צורה על הבד. אם תלחצו על הצורה, תוכלו לערוך את הצורה על ידי גרירת הנקודות שמופיעות",
+    "PAINT_GUIDE_SAVE_DESCRIPTION": ".שמור שינויים ועזוב את עורך הגרפי",
+    "PAINT_GUIDE_FILL_DESCRIPTION": ".לאחר בחירת כלי המילוי, תוכל להקיש על כל קטע של תו או צורה כדי למלא אותו בצבע שנבחר כעת",
+    "PAINT_GUIDE_CAMERA_DESCRIPTION": ".לאחר בחירת כלי המצלמה, תוכל ללחוץ על כל קטע של דמות או צורה, ולאחר מכן ללחוץ על לחצן המצלמה כדי למלא את הקטע בתמונה חדשה שצולמה עם המצלמה",
+    "PAINT_GUIDE_COLOR_DESCRIPTION": ".בחר צבע חדש לשימוש לציור ומילוי צורות",
+    "PAINT_GUIDE_LINE_WIDTH_DESCRIPTION": ".שנה את רוחב הקווים בצורות שאתה מצייר",
     "SAMPLE_Under the sea": "Under the sea",
     "SAMPLE_Farm": "Farm",
     "SAMPLE_Seasons": "Seasons",
