--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -105,7 +105,7 @@
     "INTERFACE_GUIDE_RESET_CHAR_DESCRIPTION": "אפסו את כל הדמויות לעמדות ההתחלה שלהם על הבמה. (גררו דמויות כדי להגדיר עמדות התחלה חדשות) ",
     "INTERFACE_GUIDE_GREEN_FLAG_DESCRIPTION": ".להפעלת כל תסריטי התכנות המתחילים בהוראה התחל בדגל ירוק הקישו כאן",
     "INTERFACE_GUIDE_PAGES_DESCRIPTION": ".בחרו בין הדפים בפרויקט שלכם - או הקישו על סימן הפלוס כדי להוסיף דף חדש. בכל עמוד סדרת דמויות משלו ורקע. למחיקת עמוד, לחץ עליו וכשיתנדנד סגרו באיקס. כדי לשנות את סדר הדפים, גררו אותם למיקומים חדשים",
-    "INTERFACE_GUIDE_PROJECT_INFO_DESCRIPTION": ".ניתן לשנות את כותרת/שם הפרויקט ולראות מתי הוא נוצר",
+    "INTERFACE_GUIDE_PROJECT_INFO_DESCRIPTION": ".נִתָּן לְשַׁנּוֹת אֶת כּוֹתֶרֶת/שֵׁם הַפְּרוֹיֵקְט וְלִרְאוֹת מָתַי הוּא נוֹצַר",
     "INTERFACE_GUIDE_UNDO_REDO_DESCRIPTION": ".אם טעיתם, הקישו על בטל כדי לחזור אחורה בזמן, ולבטל את הפעולה האחרונה. הקישו על בצע שוב כדי להחזיר את הביטול האחרון",
     "INTERFACE_GUIDE_PROGRAMMING_SCRIPT_DESCRIPTION": ".הצמידו בלוקים יחד כדי ליצור סקריפט תכנות, ולומר לדמות מה לעשות. הקישו בכל מקום בתסריט כדי להפעיל אותו. כדי למחוק לבנה או חלקים מהסקריפט, גרור אותם אל מחוץ ל-אזור התכנות. כדי להעתיק לבנה או סקריפט מדמות אחת לאחרת, גרור אותה אל ה-תמונה הממוזערת של הדמות משמאל)",
     "INTERFACE_GUIDE_PROGRAMMING_AREA_DESCRIPTION": ".זה המקום בו אנו מחברים את לבני תכנות ליצירת סקריפטים",
