--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -21,7 +21,7 @@
     "BLOCKS_GREEN_FLAG": "התחל עם דגל ירוק",
     "BLOCKS_GREEN_FLAG_DESCRIPTION": "הפעלת תסריט כאשר מקישים על הדגל הירוק",
     "BLOCKS_ON_TAP": "התחל בנגיעה",
-    "BLOCKS_ON_TAP_DESCRIPTION": "Starts the script when you tap on the character.",
+    "BLOCKS_ON_TAP_DESCRIPTION": ".בִּלְחִיצָה עַל הַדְּמוּת הַפְעֵל תַּסְרִיט",
     "BLOCKS_ON_TOUCH": "התחל בנגיעה",
     "BLOCKS_ON_TOUCH_DESCRIPTION": ".הפעלת תסריט כאשר דמות אחת נוגעת בדמות אחרת",
     "BLOCKS_ON_MESSAGE": "התחל בנגיעה",
@@ -44,7 +44,7 @@
     "BLOCKS_HOP": "Hop",
     "BLOCKS_HOP_DESCRIPTION": ".תנועה של דמות למעלה מספר צעדים נבחר ואז למטה או מספר של צעדים (קפיצה)",
     "BLOCKS_GO_HOME": "לך הבייתה",
-    "BLOCKS_GO_HOME_DESCRIPTION": "Resets the character's location to its starting position. (To set a new starting position, drag the character to the location).",
+    "BLOCKS_GO_HOME_DESCRIPTION": ".מֵאֶפֶס אֶת מִקּוּם הַדְּמוּת לְמַצַּב הַהַתְחָלָה שֶׁלָּהּ. (כְּדֵי לְהַגְדִּיר מִקּוּם הַתְחָלָה חָדָשׁ, גָּרְרוּ אֶת הַדְּמוּת לַמִּקּוּם הָרָצוּי)",
     "BLOCKS_LOOKS_BLOCKS": "לבני מראה",
     "BLOCKS_SAY": "אמור",
     "BLOCKS_SAY_DESCRIPTION": ".הצגת הודעה שצוינה בבועת דיבור מעל הדמות",
