--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -119,7 +119,7 @@
     "PAINT_GUIDE_CUT": "{N, number} | חתוך",
     "PAINT_GUIDE_DUPLICATE": "{N, number} | שכפל",
     "PAINT_GUIDE_ROTATE": "{N, number} | סובב",
-    "PAINT_GUIDE_DRAG": "{N, number} | Drag",
+    "PAINT_GUIDE_DRAG": "{N, number} | גרור",
     "PAINT_GUIDE_SAVE": "{N, number} | שמור",
     "PAINT_GUIDE_FILL": "{N, number} | מלא צבע",
     "PAINT_GUIDE_CAMERA": "{N, number} | מצלמה",
@@ -138,11 +138,11 @@
     "PAINT_GUIDE_CAMERA_DESCRIPTION": ".לאחר בחירת כלי המצלמה, תוכל ללחוץ על כל קטע של דמות או צורה, ולאחר מכן ללחוץ על לחצן המצלמה כדי למלא את הקטע בתמונה חדשה שצולמה עם המצלמה",
     "PAINT_GUIDE_COLOR_DESCRIPTION": ".בחר צבע חדש לשימוש לציור ומילוי צורות",
     "PAINT_GUIDE_LINE_WIDTH_DESCRIPTION": ".שנה את רוחב הקווים בצורות שאתה מצייר",
-    "SAMPLE_Under the sea": "Under the sea",
-    "SAMPLE_Farm": "Farm",
+    "SAMPLE_Under the sea": "מִתַּחַת לַמַּיִם",
+    "SAMPLE_Farm": "הַחַוָּה",
     "SAMPLE_Seasons": "Seasons",
-    "SAMPLE_Friends": "Friends",
-    "SAMPLE_Dance": "Dance",
+    "SAMPLE_Friends": "חֲבֵרִים",
+    "SAMPLE_Dance": "  רִקּוּד",
     "SAMPLE_Animal Race": "Animal Race",
     "SAMPLE_Bump": "Bump",
     "SAMPLE_Quick Intro": "Quick Intro",
