--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -21,7 +21,7 @@
     "BLOCKS_GREEN_FLAG": "התחל עם דגל ירוק",
     "BLOCKS_GREEN_FLAG_DESCRIPTION": "הפעלת תסריט כאשר מקישים על הדגל הירוק",
     "BLOCKS_ON_TAP": "התחל בנגיעה",
-    "BLOCKS_ON_TAP_DESCRIPTION": ".בִּלְחִיצָה עַל הַדְּמוּת הַפְעֵל תַּסְרִיט",
+    "BLOCKS_ON_TAP_DESCRIPTION": ".בלחיצה על הדמות הפעל תסריט",
     "BLOCKS_ON_TOUCH": "התחל בנגיעה",
     "BLOCKS_ON_TOUCH_DESCRIPTION": ".הפעלת תסריט כאשר דמות אחת נוגעת בדמות אחרת",
     "BLOCKS_ON_MESSAGE": "התחל בנגיעה",
@@ -44,7 +44,7 @@
     "BLOCKS_HOP": "Hop",
     "BLOCKS_HOP_DESCRIPTION": ".תנועה של דמות למעלה מספר צעדים נבחר ואז למטה או מספר של צעדים (קפיצה)",
     "BLOCKS_GO_HOME": "לך הבייתה",
-    "BLOCKS_GO_HOME_DESCRIPTION": ".מֵאֶפֶס אֶת מִקּוּם הַדְּמוּת לְמַצַּב הַהַתְחָלָה שֶׁלָּהּ. (כְּדֵי לְהַגְדִּיר מִקּוּם הַתְחָלָה חָדָשׁ, גָּרְרוּ אֶת הַדְּמוּת לַמִּקּוּם הָרָצוּי)",
+    "BLOCKS_GO_HOME_DESCRIPTION": ".אפסו את מקום הדמות למצב ההתחלתי שלה (כדי להגדיר מקום חדש כררו את הדמות למקום הרצוי",
     "BLOCKS_LOOKS_BLOCKS": "לבני מראה",
     "BLOCKS_SAY": "אמור",
     "BLOCKS_SAY_DESCRIPTION": ".הצגת הודעה שצוינה בבועת דיבור מעל הדמות",
