--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -140,11 +140,11 @@
     "PAINT_GUIDE_LINE_WIDTH_DESCRIPTION": ".שנה את רוחב הקווים בצורות שאתה מצייר",
     "SAMPLE_Under the sea": "מִתַּחַת לַמַּיִם",
     "SAMPLE_Farm": "הַחַוָּה",
-    "SAMPLE_Seasons": "Seasons",
+    "SAMPLE_Seasons": "עוֹנוֹת הַשָּׁנָה",
     "SAMPLE_Friends": "חֲבֵרִים",
     "SAMPLE_Dance": "  רִקּוּד",
-    "SAMPLE_Animal Race": "Animal Race",
-    "SAMPLE_Bump": "Bump",
+    "SAMPLE_Animal Race": "מֵרוֹץ חַיּוֹת",
+    "SAMPLE_Bump": "גַבשׁוּשִׁית",
     "SAMPLE_Quick Intro": "Quick Intro",
     "SAMPLE_Star": "Star",
     "SAMPLE_TEXT_key_character_cat": "Cat",
