--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -100,7 +100,7 @@
     "INTERFACE_GUIDE_STAGE_DESCRIPTION": "כאן מתבצעות הפעולות בפרויקט. כדי למחוק דמות, לחץ והחזק אותה",
     "INTERFACE_GUIDE_PRESENTATION_MODE_DESCRIPTION": "הרחב את הבמה למסך מלא.",
     "INTERFACE_GUIDE_GRID_DESCRIPTION": "הפעלה (וכיבוי) של רשת הקואורדינטות של x-y",
-    "INTERFACE_GUIDE_CHANGE_BG_DESCRIPTION": "בחרו או צרו בעצמכם תמונת רקע לבמה.",
+    "INTERFACE_GUIDE_CHANGE_BG_DESCRIPTION": ".בחרו או צרו בעצמכם תמונת רקע לבמה",
     "INTERFACE_GUIDE_ADD_TEXT_DESCRIPTION": "כתבו כותרות ותוויות על הבמה. (ניתן לשנות גודל וצבע)",
     "INTERFACE_GUIDE_RESET_CHAR_DESCRIPTION": "אפסו את כל הדמויות לעמדות ההתחלה שלהם על הבמה. (גררו דמויות כדי להגדיר עמדות התחלה חדשות) ",
     "INTERFACE_GUIDE_GREEN_FLAG_DESCRIPTION": ".להפעלת כל תסריטי התכנות המתחילים בהוראה התחל בדגל ירוק הקישו כאן",
@@ -128,7 +128,7 @@
     "PAINT_GUIDE_UNDO_DESCRIPTION": ".בטל - מבטל את השינוי האחרון",
     "PAINT_GUIDE_REDO_DESCRIPTION": ".הופך את הביטול האחרון",
     "PAINT_GUIDE_SHAPE_DESCRIPTION": ".בחר צורה לציור: קו, עיגול/אליפסה, מלבן או משולש",
-    "PAINT_GUIDE_CHARACTER_NAME_DESCRIPTION": " .ערוך את שם הדמות",
+    "PAINT_GUIDE_CHARACTER_NAME_DESCRIPTION": ".ערוך את שם הדמות",
     "PAINT_GUIDE_CUT_DESCRIPTION": "לאחר בחירת הכלי Cut, תוכל להקיש על תו או צורה כדי להסיר אותם מהבד.",
     "PAINT_GUIDE_DUPLICATE_DESCRIPTION": ".לאחר בחירת  כלי שכפול, תוכלו להקיש על תו או צורה כדי ליצור עותק שלהם",
     "PAINT_GUIDE_ROTATE_DESCRIPTION": ".לאחר בחירת הכלי סיבוב, תוכלו לסובב תו או צורה סביב המרכז שלה",
