--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -69,14 +69,14 @@
     "BLOCKS_STOP": "עצור",
     "BLOCKS_STOP_DESCRIPTION": ".עצירת את כל התסריטים של הדמויות",
     "BLOCKS_SET_SPEED": "קבע מהירות",
-    "BLOCKS_SET_SPEED_DESCRIPTION": "משנה את קצב הפעלת לבנים מסוימים.",
+    "BLOCKS_SET_SPEED_DESCRIPTION": ".משנה את קצב הפעלת לבנים מסוימים",
     "BLOCKS_REPEAT": "חזור",
-    "BLOCKS_REPEAT_DESCRIPTION": "הפעלת הלבנים בתוך מספר מוגדר של פעמים.",
+    "BLOCKS_REPEAT_DESCRIPTION": ".הפעלת הלבנים בתוך מספר מוגדר של פעמים",
     "BLOCKS_END_BLOCKS": "לבנת סיום",
     "BLOCKS_END": "סוף",
     "BLOCKS_END_DESCRIPTION": ".סמן סוף תכנית אך לא משפיע על תסריט עצמו ",
     "BLOCKS_REPEAT_FOREVER": "לעולמים",
-    "BLOCKS_REPEAT_FOREVER_DESCRIPTION": "הרצת התסריט לעולמים.",
+    "BLOCKS_REPEAT_FOREVER_DESCRIPTION": ".הרצת התסריט לעולמים",
     "BLOCKS_GO_TO_PAGE": "Go to Page",
     "BLOCKS_GO_TO_PAGE_DESCRIPTION": ".עבור לדף מוגדר בפרויקט",
     "INTERFACE_GUIDE_NUMBER": "{N, number}",
@@ -98,7 +98,7 @@
     "INTERFACE_GUIDE_CHARACTERS": "{N, number} | דמויות",
     "INTERFACE_GUIDE_SAVE_DESCRIPTION": ".שמור את הפרויקט הנוכחי וצא לדף הבית",
     "INTERFACE_GUIDE_STAGE_DESCRIPTION": "כאן מתבצעות הפעולות בפרויקט. כדי למחוק דמות, לחץ והחזק אותה",
-    "INTERFACE_GUIDE_PRESENTATION_MODE_DESCRIPTION": "הרחב את הבמה למסך מלא.",
+    "INTERFACE_GUIDE_PRESENTATION_MODE_DESCRIPTION": ".הרחב את הבמה למסך מלא",
     "INTERFACE_GUIDE_GRID_DESCRIPTION": "הפעלה (וכיבוי) של רשת הקואורדינטות של x-y",
     "INTERFACE_GUIDE_CHANGE_BG_DESCRIPTION": ".בחרו או צרו בעצמכם תמונת רקע לבמה",
     "INTERFACE_GUIDE_ADD_TEXT_DESCRIPTION": "כתבו כותרות ותוויות על הבמה. (ניתן לשנות גודל וצבע)",
@@ -129,7 +129,7 @@
     "PAINT_GUIDE_REDO_DESCRIPTION": ".הופך את הביטול האחרון",
     "PAINT_GUIDE_SHAPE_DESCRIPTION": ".בחר צורה לציור: קו, עיגול/אליפסה, מלבן או משולש",
     "PAINT_GUIDE_CHARACTER_NAME_DESCRIPTION": ".ערוך את שם הדמות",
-    "PAINT_GUIDE_CUT_DESCRIPTION": "לאחר בחירת הכלי Cut, תוכל להקיש על תו או צורה כדי להסיר אותם מהבד.",
+    "PAINT_GUIDE_CUT_DESCRIPTION": ".לאחר בחירת הכלי Cut, תוכל להקיש על תו או צורה כדי להסיר אותם מהבד",
     "PAINT_GUIDE_DUPLICATE_DESCRIPTION": ".לאחר בחירת  כלי שכפול, תוכלו להקיש על תו או צורה כדי ליצור עותק שלהם",
     "PAINT_GUIDE_ROTATE_DESCRIPTION": ".לאחר בחירת הכלי סיבוב, תוכלו לסובב תו או צורה סביב המרכז שלה",
     "PAINT_GUIDE_DRAG_DESCRIPTION": ".אחר בחירת כלי הגרירה, תוכלו לגרור דמות או צורה על הבד. אם תלחצו על הצורה, תוכלו לערוך את הצורה על ידי גרירת הנקודות שמופיעות",
