--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -67,18 +67,18 @@
     "BLOCKS_WAIT": "המתן",
     "BLOCKS_WAIT_DESCRIPTION": "השהיית התסריט למשך פרק זמן מוגדר בעשיריות השניות.",
     "BLOCKS_STOP": "עצור",
-    "BLOCKS_STOP_DESCRIPTION": ".עצירת את כל התסריטים של הדמויות",
+    "BLOCKS_STOP_DESCRIPTION": "עצירת את כל התסריטים של הדמויות.",
     "BLOCKS_SET_SPEED": "קבע מהירות",
-    "BLOCKS_SET_SPEED_DESCRIPTION": ".שינוי המהירות של התסריטים",
+    "BLOCKS_SET_SPEED_DESCRIPTION": "שינוי המהירות של התסריטים.",
     "BLOCKS_REPEAT": "חזור",
-    "BLOCKS_REPEAT_DESCRIPTION": ".הפעלת הלבנים בתוך מספר מוגדר של פעמים",
+    "BLOCKS_REPEAT_DESCRIPTION": "הפעלת הלבנים  מספר מוגדר של פעמים.",
     "BLOCKS_END_BLOCKS": "לבנת סיום",
     "BLOCKS_END": "סוף",
-    "BLOCKS_END_DESCRIPTION": ".סמן סוף תכנית אך לא משפיע על תסריט עצמו ",
+    "BLOCKS_END_DESCRIPTION": "לבנת סוף תכנית אין לה השפעה על תסריט עצמו.",
     "BLOCKS_REPEAT_FOREVER": "לעולמים",
-    "BLOCKS_REPEAT_FOREVER_DESCRIPTION": ".הרצת התסריט לעולמים",
+    "BLOCKS_REPEAT_FOREVER_DESCRIPTION": "הרצת התסריט לעולמים.",
     "BLOCKS_GO_TO_PAGE": "Go to Page",
-    "BLOCKS_GO_TO_PAGE_DESCRIPTION": ".עבור לדף מוגדר בפרויקט",
+    "BLOCKS_GO_TO_PAGE_DESCRIPTION": "עבור לדף מוגדר בפרויקט.",
     "INTERFACE_GUIDE_NUMBER": "{N, number}",
     "INTERFACE_GUIDE_SAVE": "{N, number} | שמור",
     "INTERFACE_GUIDE_STAGE": "{N, number} | במה",
