--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -8,7 +8,7 @@
     "INTERFACE_GUIDE": "מדריך לממשק",
     "PAINT_EDITOR_GUIDE": "מדריך לעורך צבע",
     "BLOCKS_GUIDE": "מדריך ללבנים",
-    "ABOUT_WHAT_IS": " ?ScratchJr מה זה",
+    "ABOUT_WHAT_IS": " ScratchJr מה זה?",
     "ABOUT_DESCRIPTION": "ScratchJr מבוא לשפת תכנות המאפשרת לילדים צעירים (גילאי 5-7) ליצור סיפורים ומשחקים אינטראקטיביים משלהם. ילדים מצמידים לבני תכנות גרפיות כדי לגרום לדמויות לזוז, לקפוץ, לרקוד ולשיר. ילדים יכולים לשנות דמויות בעורך הצבע, להוסיף קולות וצלילים משלהם, אפילו להכניס תמונות של עצמם -- ואז להשתמש בלבני התכנות כדי לגרום לדמויות שלהם להתעורר לחיים",
     "ABOUT_INSPIRED_BY": "ScratchJr נוצרה בהשראת שפת התכנות הפופולרית Scratch (http://scratch.mit.edu), המשמשת מיליוני צעירים (מגיל 8 ומעלה) ברחבי העולם. ביצירת ScratchJr, עיצבנו מחדש את הממשק ושפת התכנות כדי להפוך אותם למתאימים מבחינה התפתחותית לילדים צעירים יותר, תוך עיצוב קפדני של תכונות כדי להתאים להתפתחות הקוגניטיבית, האישית, החברתית והרגשית של ילדים צעירים. <br/><br/>ScratchJr זמין כאפליקציה חינמית עבור iPad ו-Android כאחד. למידע נוסף על ScratchJr, ראה http://scratchjr.org",
     "ABOUT_WHY_CREATE": "ScratchJR מַדּוּעַ יָצַרְנוּ אֶת? ",
