--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -96,22 +96,22 @@
     "INTERFACE_GUIDE_BLOCKS_PALETTE": "{N, number} | לוח לבנים",
     "INTERFACE_GUIDE_BLOCKS_CATEGORIES": "{N, number} | קטגוריות הלבנים",
     "INTERFACE_GUIDE_CHARACTERS": "{N, number} | דמויות",
-    "INTERFACE_GUIDE_SAVE_DESCRIPTION": ".שמור את הפרויקט הנוכחי וצא לדף הבית",
+    "INTERFACE_GUIDE_SAVE_DESCRIPTION": "שמור את הפרויקט הנוכחי וצא לדף הבית.",
     "INTERFACE_GUIDE_STAGE_DESCRIPTION": "כאן מתבצעות הפעולות בפרויקט. כדי למחוק דמות, לחץ והחזק אותה",
     "INTERFACE_GUIDE_PRESENTATION_MODE_DESCRIPTION": ".הרחב את הבמה למסך מלא",
     "INTERFACE_GUIDE_GRID_DESCRIPTION": "הפעלה (וכיבוי) של רשת הקואורדינטות של x-y",
-    "INTERFACE_GUIDE_CHANGE_BG_DESCRIPTION": ".בחרו או צרו בעצמכם תמונת רקע לבמה",
+    "INTERFACE_GUIDE_CHANGE_BG_DESCRIPTION": "בחרו או צרו בעצמכם תמונת רקע לבמה.",
     "INTERFACE_GUIDE_ADD_TEXT_DESCRIPTION": "כתבו כותרות ותוויות על הבמה. (ניתן לשנות גודל וצבע)",
     "INTERFACE_GUIDE_RESET_CHAR_DESCRIPTION": "אפסו את כל הדמויות לעמדות ההתחלה שלהם על הבמה. (גררו דמויות כדי להגדיר עמדות התחלה חדשות) ",
-    "INTERFACE_GUIDE_GREEN_FLAG_DESCRIPTION": ".להפעלת כל תסריטי התכנות המתחילים בהוראה התחל בדגל ירוק הקישו כאן",
-    "INTERFACE_GUIDE_PAGES_DESCRIPTION": ".בחרו בין הדפים בפרויקט שלכם - או הקישו על סימן הפלוס כדי להוסיף דף חדש. בכל עמוד סדרת דמויות משלו ורקע. למחיקת עמוד, לחץ עליו וכשיתנדנד סגרו באיקס. כדי לשנות את סדר הדפים, גררו אותם למיקומים חדשים",
-    "INTERFACE_GUIDE_PROJECT_INFO_DESCRIPTION": ".נִתָּן לְשַׁנּוֹת אֶת כּוֹתֶרֶת/שֵׁם הַפְּרוֹיֵקְט וְלִרְאוֹת מָתַי הוּא נוֹצַר",
-    "INTERFACE_GUIDE_UNDO_REDO_DESCRIPTION": ".אם טעיתם, הקישו על בטל כדי לחזור אחורה בזמן, ולבטל את הפעולה האחרונה. הקישו על בצע שוב כדי להחזיר את הביטול האחרון",
-    "INTERFACE_GUIDE_PROGRAMMING_SCRIPT_DESCRIPTION": ".הצמידו בלוקים יחד כדי ליצור סקריפט תכנות, ולומר לדמות מה לעשות. הקישו בכל מקום בתסריט כדי להפעיל אותו. כדי למחוק לבנה או חלקים מהסקריפט, גרור אותם אל מחוץ ל-אזור התכנות. כדי להעתיק לבנה או סקריפט מדמות אחת לאחרת, גרור אותה אל ה-תמונה הממוזערת של הדמות משמאל)",
+    "INTERFACE_GUIDE_GREEN_FLAG_DESCRIPTION": "להפעלת כל תסריטי התכנות המתחילים בהוראה התחל בדגל ירוק הקישו כאן.",
+    "INTERFACE_GUIDE_PAGES_DESCRIPTION": "בחרו בין הדפים בפרויקט שלכם - או הקישו על סימן הפלוס כדי להוסיף דף חדש. בכל עמוד סדרת דמויות משלו ורקע. למחיקת עמוד, לחץ עליו וכשיתנדנד סגרו באיקס. כדי לשנות את סדר הדפים, גררו אותם למיקומים חדשים.",
+    "INTERFACE_GUIDE_PROJECT_INFO_DESCRIPTION": "נִתָּן לְשַׁנּוֹת אֶת כּוֹתֶרֶת/שֵׁם הַפְּרוֹיֵקְט וְלִרְאוֹת מָתַי הוּא נוֹצַר.",
+    "INTERFACE_GUIDE_UNDO_REDO_DESCRIPTION": "אם טעיתם, הקישו על בטל כדי לחזור אחורה בזמן, ולבטל את הפעולה האחרונה. הקישו על בצע שוב כדי להחזיר את הביטול האחרון.",
+    "INTERFACE_GUIDE_PROGRAMMING_SCRIPT_DESCRIPTION": "הצמידו בלוקים יחד כדי ליצור סקריפט תכנות, ולומר לדמות מה לעשות. הקישו בכל מקום בתסריט כדי להפעיל אותו. כדי למחוק לבנה או חלקים מהסקריפט, גרור אותם אל מחוץ ל-אזור התכנות. כדי להעתיק לבנה או סקריפט מדמות אחת לאחרת, גרור אותה אל ה-תמונה הממוזערת של הדמות משמאל).",
     "INTERFACE_GUIDE_PROGRAMMING_AREA_DESCRIPTION": ".זה המקום בו אנו מחברים את לבני תכנות ליצירת סקריפטים",
-    "INTERFACE_GUIDE_BLOCKS_PALETTE_DESCRIPTION": ".זהו התפריט של הלבנים לתכנות. גררו לבנה לאזור התכנות ואז הקישו עליה, לראות מה היא עושה",
-    "INTERFACE_GUIDE_BLOCKS_CATEGORIES_DESCRIPTION": ".כאן תוכלו לבחור קטגוריה של בלוקים לתכנות: הפעלת בלוקים (צהוב), תנועה (כחול), מראה (סגול), צלילים (ירוק), שליטה (כתום), בלוקים בסיום (אדום)",
-    "INTERFACE_GUIDE_CHARACTERS_DESCRIPTION": "בחרו בין הדמויות בפרויקט שלכם - או הקישו על סימן הפלוס כדי להוסיף דמות חדשה. כאשר דמות  נבחרת, אתם יכולים לערוך את התסריטים שלה, להקיש על שמה כדי לשנות אותו, או להקיש על מכחול הצבע כדי לערוך את הדמות. למחיקת דמות, לחצו עליה וכשתתנדנד סיגרו באיקס.. להעתקת דמות לדף אחר, גרור אותה לתמונה הממוזערת של הדף (משמאל)..",
+    "INTERFACE_GUIDE_BLOCKS_PALETTE_DESCRIPTION": "זהו התפריט של הלבנים לתכנות. גררו לבנה לאזור התכנות ואז הקישו עליה, לראות מה היא עושה.",
+    "INTERFACE_GUIDE_BLOCKS_CATEGORIES_DESCRIPTION": "כאן תוכלו לבחור קטגוריה של בלוקים לתכנות: הפעלת בלוקים (צהוב), תנועה (כחול), מראה (סגול), צלילים (ירוק), שליטה (כתום), בלוקים בסיום (אדום)",
+    "INTERFACE_GUIDE_CHARACTERS_DESCRIPTION": "בחרו בין הדמויות בפרויקט שלכם - או הקישו על סימן הפלוס כדי להוסיף דמות חדשה. כאשר דמות  נבחרת, אתם יכולים לערוך את התסריטים שלה, להקיש על שמה כדי לשנות אותו, או להקיש על מכחול הצבע כדי לערוך את הדמות. למחיקת דמות, לחצו עליה וכשתתנדנד סיגרו באיקס.. להעתקת דמות לדף אחר, גרור אותה לתמונה הממוזערת של הדף (משמאל).",
     "PAINT_GUIDE_UNDO": "{N, number} | בטל",
     "PAINT_GUIDE_REDO": "{N, number} | בצע מחדש",
     "PAINT_GUIDE_SHAPE": "{N, number} | צורה",
@@ -125,19 +125,19 @@
     "PAINT_GUIDE_CAMERA": "{N, number} | מצלמה",
     "PAINT_GUIDE_COLOR": "{N, number} | צבע",
     "PAINT_GUIDE_LINE_WIDTH": "{N, number} | רוחב הקו",
-    "PAINT_GUIDE_UNDO_DESCRIPTION": ".בטל - מבטל את השינוי האחרון",
-    "PAINT_GUIDE_REDO_DESCRIPTION": ".הופך את הביטול האחרון",
-    "PAINT_GUIDE_SHAPE_DESCRIPTION": ".בחר צורה לציור: קו, עיגול/אליפסה, מלבן או משולש",
+    "PAINT_GUIDE_UNDO_DESCRIPTION": "בטל - מבטל את השינוי האחרון.",
+    "PAINT_GUIDE_REDO_DESCRIPTION": "הופך את הביטול האחרון.",
+    "PAINT_GUIDE_SHAPE_DESCRIPTION": "בחר צורה לציור: קו, עיגול/אליפסה, מלבן או משולש.",
     "PAINT_GUIDE_CHARACTER_NAME_DESCRIPTION": ".ערוך את שם הדמות",
-    "PAINT_GUIDE_CUT_DESCRIPTION": ".לאחר בחירת הכלי Cut, תוכל להקיש על תו או צורה כדי להסיר אותם מהבד",
-    "PAINT_GUIDE_DUPLICATE_DESCRIPTION": ".לאחר בחירת  כלי שכפול, תוכלו להקיש על תו או צורה כדי ליצור עותק שלהם",
-    "PAINT_GUIDE_ROTATE_DESCRIPTION": ".לאחר בחירת הכלי סיבוב, תוכלו לסובב תו או צורה סביב המרכז שלה",
-    "PAINT_GUIDE_DRAG_DESCRIPTION": ".אחר בחירת כלי הגרירה, תוכלו לגרור דמות או צורה על הבד. אם תלחצו על הצורה, תוכלו לערוך את הצורה על ידי גרירת הנקודות שמופיעות",
+    "PAINT_GUIDE_CUT_DESCRIPTION": "לאחר בחירת הכלי Cut, תוכל להקיש על תו או צורה כדי להסיר אותם מהבד.",
+    "PAINT_GUIDE_DUPLICATE_DESCRIPTION": "לאחר בחירת  כלי שכפול, תוכלו להקיש על תו או צורה כדי ליצור עותק שלהם.",
+    "PAINT_GUIDE_ROTATE_DESCRIPTION": "לאחר בחירת הכלי סיבוב, תוכלו לסובב תו או צורה סביב המרכז שלה.",
+    "PAINT_GUIDE_DRAG_DESCRIPTION": "אחר בחירת כלי הגרירה, תוכלו לגרור דמות או צורה על הבד. אם תלחצו על הצורה, תוכלו לערוך את הצורה על ידי גרירת הנקודות שמופיעות.",
     "PAINT_GUIDE_SAVE_DESCRIPTION": ".שמור שינויים ועזוב את עורך הגרפי",
     "PAINT_GUIDE_FILL_DESCRIPTION": ".לאחר בחירת כלי המילוי, תוכל להקיש על כל קטע של תו או צורה כדי למלא אותו בצבע שנבחר כעת",
-    "PAINT_GUIDE_CAMERA_DESCRIPTION": ".לאחר בחירת כלי המצלמה, תוכל ללחוץ על כל קטע של דמות או צורה, ולאחר מכן ללחוץ על לחצן המצלמה כדי למלא את הקטע בתמונה חדשה שצולמה עם המצלמה",
-    "PAINT_GUIDE_COLOR_DESCRIPTION": ".בחר צבע חדש לשימוש לציור ומילוי צורות",
-    "PAINT_GUIDE_LINE_WIDTH_DESCRIPTION": ".שנה את רוחב הקווים בצורות שאתה מצייר",
+    "PAINT_GUIDE_CAMERA_DESCRIPTION": "לאחר בחירת כלי המצלמה, תוכל ללחוץ על כל קטע של דמות או צורה, ולאחר מכן ללחוץ על לחצן המצלמה כדי למלא את הקטע בתמונה חדשה שצולמה עם המצלמה.",
+    "PAINT_GUIDE_COLOR_DESCRIPTION": "בחר צבע חדש לשימוש לציור ומילוי צורות.",
+    "PAINT_GUIDE_LINE_WIDTH_DESCRIPTION": "שנה את רוחב הקווים בצורות שאתה מצייר.",
     "SAMPLE_Under the sea": "מִתַּחַת לַמַּיִם",
     "SAMPLE_Farm": "הַחַוָּה",
     "SAMPLE_Seasons": "עוֹנוֹת הַשָּׁנָה",
