--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -21,35 +21,35 @@
     "BLOCKS_GREEN_FLAG": "התחל עם דגל ירוק",
     "BLOCKS_GREEN_FLAG_DESCRIPTION": "הפעלת תסריט כאשר מקישים על הדגל הירוק",
     "BLOCKS_ON_TAP": "התחל בנגיעה",
-    "BLOCKS_ON_TAP_DESCRIPTION": ".בלחיצה על הדמות הפעל תסריט",
+    "BLOCKS_ON_TAP_DESCRIPTION": ".בלחיצה על הדמות הפעל תסריט.",
     "BLOCKS_ON_TOUCH": "התחל בנגיעה",
-    "BLOCKS_ON_TOUCH_DESCRIPTION": ".הפעלת תסריט כאשר דמות אחת נוגעת בדמות אחרת",
+    "BLOCKS_ON_TOUCH_DESCRIPTION": "הפעלת תסריט כאשר דמות אחת נוגעת בדמות אחרת.",
     "BLOCKS_ON_MESSAGE": "התחל בנגיעה",
     "BLOCKS_ON_MESSAGE_DESCRIPTION": "הפעלת תסריט בכל פעם שנשלחת מסר בצבע שצוין",
     "BLOCKS_SEND_MESSAGE": "שלח מסר",
     "BLOCKS_SEND_MESSAGE_DESCRIPTION": "שלח מסר בצבע שנבחר",
     "BLOCKS_MOTION_BLOCKS": "לבני תנועה",
     "BLOCKS_MOVE_RIGHT": "תנועה ימינה",
-    "BLOCKS_MOVE_RIGHT_DESCRIPTION": ".הנע את הדמות ימינה מספר צעדים של ריבועי רשת",
+    "BLOCKS_MOVE_RIGHT_DESCRIPTION": "הנע את הדמות ימינה מספר צעדים של ריבועי רשת.",
     "BLOCKS_MOVE_LEFT": "תנועה שמאלה",
-    "BLOCKS_MOVE_LEFT_DESCRIPTION": ".הנע את הדמות שמאלה מספר צעדים של ריבועי רשת",
+    "BLOCKS_MOVE_LEFT_DESCRIPTION": "הנע את הדמות שמאלה מספר צעדים של ריבועי רשת.",
     "BLOCKS_MOVE_UP": "תנועה למעלה",
-    "BLOCKS_MOVE_UP_DESCRIPTION": ".הנע את הדמות למעלה מספר צעדים של ריבועי רשת",
+    "BLOCKS_MOVE_UP_DESCRIPTION": "הנע את הדמות למעלה מספר צעדים של ריבועי רשת.",
     "BLOCKS_MOVE_DOWN": "תנועה למטה",
-    "BLOCKS_MOVE_DOWN_DESCRIPTION": ".הנע את הדמות למטה מספר צעדים של ריבועי רשת",
+    "BLOCKS_MOVE_DOWN_DESCRIPTION": "הנע את הדמות למטה מספר צעדים של ריבועי רשת.",
     "BLOCKS_TURN_RIGHT": "סיבוב ימינה",
     "BLOCKS_TURN_RIGHT_DESCRIPTION": "סובב את הדמות בכיוון השעון בערך נבחר, הערך 12  שווה לסיבוב שלם",
     "BLOCKS_TURN_LEFT": "סיבוב שמאלה",
-    "BLOCKS_TURN_LEFT_DESCRIPTION": ".סובב את הדמות בכיוון השעון בערך נבחר, הערך 12  שווה לסיבוב שלם",
+    "BLOCKS_TURN_LEFT_DESCRIPTION": "סובב את הדמות בכיוון השעון בערך נבחר, הערך 12  שווה לסיבוב שלם.",
     "BLOCKS_HOP": "Hop",
-    "BLOCKS_HOP_DESCRIPTION": ".תנועה של דמות למעלה מספר צעדים נבחר ואז למטה או מספר של צעדים (קפיצה)",
+    "BLOCKS_HOP_DESCRIPTION": "תנועה של דמות למעלה מספר צעדים נבחר ואז למטה או מספר של צעדים (קפיצה).",
     "BLOCKS_GO_HOME": "לך הבייתה",
-    "BLOCKS_GO_HOME_DESCRIPTION": ".אפסו את מקום הדמות למצב ההתחלתי שלה (כדי להגדיר מקום חדש כררו את הדמות למקום הרצוי",
+    "BLOCKS_GO_HOME_DESCRIPTION": "אפסו את מקום הדמות למצב ההתחלתי שלה (כדי להגדיר מקום חדש כררו את הדמות למקום הרצוי.",
     "BLOCKS_LOOKS_BLOCKS": "לבני מראה",
     "BLOCKS_SAY": "אמור",
-    "BLOCKS_SAY_DESCRIPTION": ".הצגת הודעה שצוינה בבועת דיבור מעל הדמות",
+    "BLOCKS_SAY_DESCRIPTION": "הצגת הודעה שצוינה בבועת דיבור מעל הדמות.",
     "BLOCKS_GROW": "הגדל",
-    "BLOCKS_GROW_DESCRIPTION": ".הגדל את גודל הדמות",
+    "BLOCKS_GROW_DESCRIPTION": "הגדל את גודל הדמות.",
     "BLOCKS_SHRINK": "Shrink",
     "BLOCKS_SHRINK_DESCRIPTION": "הקטן את גודל הדמות",
     "BLOCKS_RESET_SIZE": "אתחל גודל דמות",
@@ -57,7 +57,7 @@
     "BLOCKS_HIDE": "הסתר",
     "BLOCKS_HIDE_DESCRIPTION": "עמעם את הדמות עד שהיא בלתי נראית",
     "BLOCKS_SHOW": "הצג",
-    "BLOCKS_SHOW_DESCRIPTION": ".הפעל את הדצות עד שהיא נראית לחלוטין",
+    "BLOCKS_SHOW_DESCRIPTION": "הפעל את הדמות עד שהיא נראית לחלוטין.",
     "BLOCKS_SOUND_BLOCKS": "לבנת קול",
     "BLOCKS_POP": "Pop",
     "BLOCKS_POP_DESCRIPTION": "Plays a \"Pop\" Sound",
@@ -98,7 +98,7 @@
     "INTERFACE_GUIDE_CHARACTERS": "{N, number} | דמויות",
     "INTERFACE_GUIDE_SAVE_DESCRIPTION": "שמור את הפרויקט הנוכחי וצא לדף הבית.",
     "INTERFACE_GUIDE_STAGE_DESCRIPTION": "כאן מתבצעות הפעולות בפרויקט. כדי למחוק דמות, לחץ והחזק אותה",
-    "INTERFACE_GUIDE_PRESENTATION_MODE_DESCRIPTION": ".הרחב את הבמה למסך מלא",
+    "INTERFACE_GUIDE_PRESENTATION_MODE_DESCRIPTION": "הרחב את הבמה למסך מלא.",
     "INTERFACE_GUIDE_GRID_DESCRIPTION": "הפעלה (וכיבוי) של רשת הקואורדינטות של x-y",
     "INTERFACE_GUIDE_CHANGE_BG_DESCRIPTION": "בחרו או צרו בעצמכם תמונת רקע לבמה.",
     "INTERFACE_GUIDE_ADD_TEXT_DESCRIPTION": "כתבו כותרות ותוויות על הבמה. (ניתן לשנות גודל וצבע)",
@@ -108,7 +108,7 @@
     "INTERFACE_GUIDE_PROJECT_INFO_DESCRIPTION": "נִתָּן לְשַׁנּוֹת אֶת כּוֹתֶרֶת/שֵׁם הַפְּרוֹיֵקְט וְלִרְאוֹת מָתַי הוּא נוֹצַר.",
     "INTERFACE_GUIDE_UNDO_REDO_DESCRIPTION": "אם טעיתם, הקישו על בטל כדי לחזור אחורה בזמן, ולבטל את הפעולה האחרונה. הקישו על בצע שוב כדי להחזיר את הביטול האחרון.",
     "INTERFACE_GUIDE_PROGRAMMING_SCRIPT_DESCRIPTION": "הצמידו בלוקים יחד כדי ליצור סקריפט תכנות, ולומר לדמות מה לעשות. הקישו בכל מקום בתסריט כדי להפעיל אותו. כדי למחוק לבנה או חלקים מהסקריפט, גרור אותם אל מחוץ ל-אזור התכנות. כדי להעתיק לבנה או סקריפט מדמות אחת לאחרת, גרור אותה אל ה-תמונה הממוזערת של הדמות משמאל).",
-    "INTERFACE_GUIDE_PROGRAMMING_AREA_DESCRIPTION": ".זה המקום בו אנו מחברים את לבני תכנות ליצירת סקריפטים",
+    "INTERFACE_GUIDE_PROGRAMMING_AREA_DESCRIPTION": "זה המקום בו אנו מחברים את לבני תכנות ליצירת סקריפטים.",
     "INTERFACE_GUIDE_BLOCKS_PALETTE_DESCRIPTION": "זהו התפריט של הלבנים לתכנות. גררו לבנה לאזור התכנות ואז הקישו עליה, לראות מה היא עושה.",
     "INTERFACE_GUIDE_BLOCKS_CATEGORIES_DESCRIPTION": "כאן תוכלו לבחור קטגוריה של בלוקים לתכנות: הפעלת בלוקים (צהוב), תנועה (כחול), מראה (סגול), צלילים (ירוק), שליטה (כתום), בלוקים בסיום (אדום)",
     "INTERFACE_GUIDE_CHARACTERS_DESCRIPTION": "בחרו בין הדמויות בפרויקט שלכם - או הקישו על סימן הפלוס כדי להוסיף דמות חדשה. כאשר דמות  נבחרת, אתם יכולים לערוך את התסריטים שלה, להקיש על שמה כדי לשנות אותו, או להקיש על מכחול הצבע כדי לערוך את הדמות. למחיקת דמות, לחצו עליה וכשתתנדנד סיגרו באיקס.. להעתקת דמות לדף אחר, גרור אותה לתמונה הממוזערת של הדף (משמאל).",
