--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -133,8 +133,8 @@
     "PAINT_GUIDE_DUPLICATE_DESCRIPTION": "לאחר בחירת  כלי שכפול, תוכלו להקיש על תו או צורה כדי ליצור עותק שלהם.",
     "PAINT_GUIDE_ROTATE_DESCRIPTION": "לאחר בחירת הכלי סיבוב, תוכלו לסובב תו או צורה סביב המרכז שלה.",
     "PAINT_GUIDE_DRAG_DESCRIPTION": "אחר בחירת כלי הגרירה, תוכלו לגרור דמות או צורה על הבד. אם תלחצו על הצורה, תוכלו לערוך את הצורה על ידי גרירת הנקודות שמופיעות.",
-    "PAINT_GUIDE_SAVE_DESCRIPTION": ".שמור שינויים ועזוב את עורך הגרפי",
-    "PAINT_GUIDE_FILL_DESCRIPTION": ".לאחר בחירת כלי המילוי, תוכל להקיש על כל קטע של תו או צורה כדי למלא אותו בצבע שנבחר כעת",
+    "PAINT_GUIDE_SAVE_DESCRIPTION": "שמור שינויים ועזוב את עורך הגרפי.",
+    "PAINT_GUIDE_FILL_DESCRIPTION": "לאחר בחירת כלי המילוי, תוכל להקיש על כל קטע של תו או צורה כדי למלא אותו בצבע שנבחר כעת.",
     "PAINT_GUIDE_CAMERA_DESCRIPTION": "לאחר בחירת כלי המצלמה, תוכל ללחוץ על כל קטע של דמות או צורה, ולאחר מכן ללחוץ על לחצן המצלמה כדי למלא את הקטע בתמונה חדשה שצולמה עם המצלמה.",
     "PAINT_GUIDE_COLOR_DESCRIPTION": "בחר צבע חדש לשימוש לציור ומילוי צורות.",
     "PAINT_GUIDE_LINE_WIDTH_DESCRIPTION": "שנה את רוחב הקווים בצורות שאתה מצייר.",
@@ -374,7 +374,7 @@
     "ALERT_BACK": "חזור",
     "ALERT_SAVING": "שמירה...",
     "SELECT_LANGUAGE": "בחר שפה",
-    "USAGE_QUESTION": "Where are you using ScratchJr?",
+    "USAGE_QUESTION": "ScratchJr-היכן משתמשים ב ?",
     "USAGE_SCHOOL": "בית ספר",
     "USAGE_HOME": "בית",
     "USAGE_OTHER": "אחר",
