--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -21,7 +21,7 @@
     "BLOCKS_GREEN_FLAG": "התחל עם דגל ירוק",
     "BLOCKS_GREEN_FLAG_DESCRIPTION": "הפעלת תסריט כאשר מקישים על הדגל הירוק",
     "BLOCKS_ON_TAP": "התחל בנגיעה",
-    "BLOCKS_ON_TAP_DESCRIPTION": ".בלחיצה על הדמות הפעל תסריט.",
+    "BLOCKS_ON_TAP_DESCRIPTION": "בלחיצה על הדמות הפעל תסריט.",
     "BLOCKS_ON_TOUCH": "התחל בנגיעה",
     "BLOCKS_ON_TOUCH_DESCRIPTION": "הפעלת תסריט כאשר דמות אחת נוגעת בדמות אחרת.",
     "BLOCKS_ON_MESSAGE": "התחל בנגיעה",
