--- a/web/public/scratchjr/localizations/He.json
+++ b/web/public/scratchjr/localizations/He.json
@@ -234,6 +234,7 @@
     "CHARACTER_Grandfather.svg": "Grandfather",
     "CHARACTER_Girl.svg": "Child",
     "CHARACTER_Boy.svg": "Child",
+    "CHARACTER_cat1.svg": "newcat",
     "CHARACTER_Teen2.svg": "Teen",
     "CHARACTER_Teen3.svg": "Teen",
     "CHARACTER_Farmer1.svg": "Rancher",
